# fastapi_docker_rabbitmq_testwork

./: README.md  docker-compose.yml
listener/: Dockerfile  pyproject.toml  receive.py
producer/: Dockerfile  app.py  pyproject.toml  schemas.py
