[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Vengeros <vengerhrum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.1.0"
fastapi = "^0.61.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
